--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: 15-418 Parallel Hough Transform
+description: Speedup comparisons between SIMD, OpenMP, and OpenMPI implmentations of Hough Transform
