--- a/code/Makefile
+++ b/code/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ -std=c++11 -mavx2 -mfma -I/home/ranil/ishaan66@github.io/include/opencv -I/home/ranil/ishaan66@github.io/include/opencv2 -L/home/ranil/ishaan66@github.io/lib/ -g -o my_serial.o hough.cpp -lopencv_core -lopencv_imgproc -lopencv_highgui
+	g++ -std=c++11 -O3 -mavx2 -mfma -I/home/ishaan66/include/opencv -I/home/ishaan66/include/opencv2 -L/home/ishaan66/lib/ -g -o my_serial.o hough.cpp -lopencv_core -lopencv_imgproc -lopencv_highgui
 
 clean:
 	rm -rf *.o *~
